# coredb-gcp-issue

./: .env  Cargo.toml  Dockerfile  README.MD  bindings.ts  rapid.Dockerfile
.github/workflows/: deploy.yml
src/: main.rs  schema.rs
src/routes/: index.rs
