[package]
name = "coredb-gcp-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
include_dir = "0.7.3"
rapid-web = "0.3.8"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
