[package]
name = "coredb-gcp-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
include_dir = "0.7.3"
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
sqlx = { version = "0.5.8", features = ["postgres", "runtime-actix-rustls"] }
tokio-postgres = "0.7.8"
r2d2_postgres = "0.18.1"
postgres = "0.19.5"
native-tls = "0.2.11"
postgres-native-tls = { version = "0.5.0", features = ["default"]}
futures = "0.3.28"
r2d2 = "0.8.10"

